--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lindyla Take Away</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
@@ -62,9 +62,39 @@
       font-weight: bold;
     }
 
+    .nav-links a[href^="#"] {
+      cursor: pointer;
+    }
+
     .cart-container {
       color: white;
       font-weight: bold;
+    }
+
+    .hero {
+      padding: 4rem 2rem;
+      text-align: center;
+      background-color: var(--rosa-claro);
+      animation: fadeIn 1s ease;
+    }
+
+    .hero h1 {
+      font-size: 2.5rem;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      margin: 1rem 0 2rem;
+    }
+
+    .hero button {
+      background-color: var(--rosa);
+      color: white;
+      padding: 0.75rem 2rem;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
     }
 
     .menu-section {
@@ -183,10 +213,10 @@
     <div class="header-content">
       <img src="lindyla-logo.png" alt="Logo Lindyla">
       <ul class="nav-links">
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Cardápio</a></li>
-        <li><a href="#">Sobre</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="#inicio">Início</a></li>
+        <li><a href="#cardapio">Cardápio</a></li>
+        <li><a href="#sobre">Sobre</a></li>
+        <li><a href="#contato">Contato</a></li>
       </ul>
     </div>
     <div class="cart-container">
@@ -194,8 +224,15 @@
       🛒 <span id="cart-count">0</span> | Total: <span id="cart-total">MZN 0.00</span>
     </div>
   </header>
+
+  <section id="inicio" class="hero">
+    <h1>Bem-vinda ao Lindyla Take Away</h1>
+    <p>Comida deliciosa, feita com carinho, entregue até você 💖</p>
+    <button onclick="document.getElementById('cardapio').scrollIntoView({ behavior: 'smooth' })">Entrar</button>
+  </section>
+
   <main>
-    <section class="menu-section">
+    <section id="cardapio" class="menu-section">
       <h2>Pratos Especiais</h2>
       <div class="menu-grid" id="menu"></div>
     </section>
@@ -207,35 +244,32 @@
     </section>
 
     <div id="payment-method"></div>
+
+    <section id="sobre" class="menu-section">
+      <h2>Sobre Nós</h2>
+      <p>Lindyla Take Away é um projeto feito com amor, trazendo sabores únicos para você saborear em casa.</p>
+    </section>
+
+    <section id="contato" class="menu-section">
+      <h2>Contato</h2>
+      <p>Email: atendimento@lindyla.com</p>
+      <p>WhatsApp: +258 84 000 0000</p>
+    </section>
   </main>
+
   <footer>
     <p>&copy; 2025 Lindyla Take Away. Todos os direitos reservados.</p>
   </footer>
+
   <audio id="click-sound" src="https://cdn.pixabay.com/audio/2022/03/15/audio_4353c1e4e0.mp3"></audio>
+
   <script>
     const pratos = [
       { nome: "Frango Grelhado", preco: 500, img: "images/prato1.png" },
       { nome: "Pizza Marguerita", preco: 600, img: "images/prato2.png" },
       { nome: "Cheeseburger", preco: 450, img: "images/prato3.png" },
       { nome: "Lasanha de Carne", preco: 550, img: "images/prato4.png" },
-      { nome: "Espaguete ao Alho", preco: 400, img: "images/prato5.png" },
-      { nome: "Arroz à Grega", preco: 350, img: "images/prato6.png" },
-      { nome: "Camarão Frito", preco: 750, img: "images/prato1.png" },
-      { nome: "Cachorro-Quente", preco: 300, img: "images/prato2.png" },
-      { nome: "Tosta Mista", preco: 250, img: "images/prato3.png" },
-      { nome: "Bife Acebolado", preco: 550, img: "images/prato4.png" },
-      { nome: "Kebab de Frango", preco: 500, img: "images/prato5.png" },
-      { nome: "Feijoada", preco: 600, img: "images/prato6.png" },
-      { nome: "Moamba de Galinha", preco: 650, img: "images/prato1.png" },
-      { nome: "Chamuças", preco: 200, img: "images/prato2.png" },
-      { nome: "Matapa", preco: 400, img: "images/prato3.png" },
-      { nome: "Pudim de Leite", preco: 300, img: "images/prato4.png" },
-      { nome: "Gelado de Baunilha", preco: 280, img: "images/prato5.png" },
-      { nome: "Mousse de Chocolate", preco: 320, img: "images/prato6.png" },
-      { nome: "Frango à Cafreal", preco: 620, img: "images/prato1.png" },
-      { nome: "Pão com Chouriço", preco: 240, img: "images/prato2.png" },
-      { nome: "Batatas Fritas", preco: 200, img: "images/prato3.png" },
-      { nome: "Coxinhas", preco: 250, img: "images/prato4.png" }
+      { nome: "Espaguete ao Alho", preco: 400, img: "images/prato5.png" }
     ];
 
     let contador = 0;
@@ -300,4 +334,3 @@
 </body>
 </html>
 
-  
