--- a/index.html
+++ b/index.html
@@ -269,9 +269,26 @@
       { nome: "Pizza Marguerita", preco: 600, img: "images/prato2.png" },
       { nome: "Cheeseburger", preco: 450, img: "images/prato3.png" },
       { nome: "Lasanha de Carne", preco: 550, img: "images/prato4.png" },
-      { nome: "Espaguete ao Alho", preco: 400, img: "images/prato5.png" }
-    ];
-
+      { nome: "Espaguete ao Alho", preco: 400, img: "images/prato5.png" },
+       { nome: "Arroz à Grega", preco: 350, img: "images/prato6.png" },
+    { nome: "Camarão Frito", preco: 750, img: "images/prato1.png" },
+    { nome: "Cachorro-Quente", preco: 300, img: "images/prato2.png" },
+    { nome: "Tosta Mista", preco: 250, img: "images/prato3.png" },
+    { nome: "Bife Acebolado", preco: 550, img: "images/prato4.png" },
+    { nome: "Kebab de Frango", preco: 500, img: "images/prato5.png" },
+    { nome: "Feijoada", preco: 600, img: "images/prato6.png" },
+    { nome: "Moamba de Galinha", preco: 650, img: "images/prato1.png" },
+    { nome: "Chamuças", preco: 200, img: "images/prato2.png" },
+    { nome: "Matapa", preco: 400, img: "images/prato3.png" },
+    { nome: "Pudim de Leite", preco: 300, img: "images/prato4.png" },
+    { nome: "Gelado de Baunilha", preco: 280, img: "images/prato5.png" },
+    { nome: "Mousse de Chocolate", preco: 320, img: "images/prato6.png" },
+    { nome: "Frango à Cafreal", preco: 620, img: "images/prato1.png" },
+    { nome: "Pão com Chouriço", preco: 240, img: "images/prato2.png" },
+    { nome: "Batatas Fritas", preco: 200, img: "images/prato3.png" },
+    { nome: "Coxinhas", preco: 250, img: "images/prato4.png" }
+  ];
+    
     let contador = 0;
     let total = 0;
 
