--- a/index.html
+++ b/index.html
@@ -269,6 +269,84 @@
   </section>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Classic Combo Selection - Lindyla Takeaway</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet"/>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>body { font-family: 'Poppins', sans-serif; }</style>
+</head>
+<body class="bg-white text-gray-900">
+  <nav class="bg-white shadow">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <a href="index.html" class="text-red-600 font-bold text-xl">Lindyla Takeaway</a>
+      <div class="space-x-6">
+        <a href="index.html" class="text-gray-700 hover:text-red-600">Home</a>
+        <a href="spicy.html" class="text-gray-700 hover:text-red-600">Spicy Chicken</a>
+        <a href="loaded_fries.html" class="text-gray-700 hover:text-red-600">Loaded Fries</a>
+        <a href="classic_combo.html" class="text-gray-700 hover:text-red-600">Classic Combo</a>
+      </div>
+    </div>
+  </nav>
+
+  <section class="py-12 px-6 md:px-20">
+    <h1 class="text-4xl font-bold text-center text-red-600 mb-10">Classic Combo Selection</h1>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?burger,combo" alt="Beef Burger Combo" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Beef Burger Combo</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?chicken,burger,combo" alt="Chicken Fillet Combo" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Chicken Fillet Combo</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?veggie,burger" alt="Veggie Burger Meal" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Veggie Burger Meal</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?fish,chips" alt="Fish & Chips Combo" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Fish & Chips Combo</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?double,burger" alt="Double Patty Delight" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Double Patty Delight</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?cheese,chicken,combo" alt="Cheesy Chicken Stack" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Cheesy Chicken Stack</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?tenders,fries" alt="Crispy Tenders Trio" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Crispy Tenders Trio</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?breakfast,box" alt="Classic Breakfast Box" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Classic Breakfast Box</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?wings,wedges" alt="Wings & Wedges Deal" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Wings & Wedges Deal</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?falafel,wrap" alt="Falafel Wrap Combo" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Falafel Wrap Combo</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?pepperoni,pizza" alt="Pepperoni Pizza Slice Box" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Pepperoni Pizza Slice Box</h2>
+      </div>
+      <div class="bg-red-50 rounded-xl shadow p-4 flex flex-col items-center">
+        <img src="https://source.unsplash.com/300x200/?grilled,chicken,wrap" alt="Grilled Chicken Wrap Set" class="rounded-lg mb-4 w-full h-auto"/>
+        <h2 class="text-lg font-semibold">Grilled Chicken Wrap Set</h2>
+      </div>
+    </div>
+  </section>
+</body>
+</html>
 
 <section id="writers" class="profiles-section">
   <div class="container">
@@ -284,21 +362,7 @@
       </div>
 
       <!-- Add more writer cards here -->
-      <div class="profile-card">
-        <img src="images/writer2.jpg" alt="Writer Name">
-        <h3>Writer Name</h3>
-        <p>Short bio or specialty…</p>
-      </div>
-      <!-- etc. -->
-    </div>
-  </div>
-</section>
-- <li><a href="#designers">Designers</a></li>
-+ <li><a href="#designers">Designers</a></li>
-+ <li><a href="#writers">Writers</a></li>
-
-
-
+     
 
 
 
